Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11360

WARNING at /build/linux-5s7Xkn/linux-4.15.0/fs/quota/dquot.c:626

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0
    • Lustre 2.12.0
    • None
    • Ubuntu18.04 Server/ldiskfs
    • 3
    • 9223372036854775807

      this is what we got on experimental ubuntu18.04 server testing. kernel claims the following warning messges when server mounted OST/MDT.

      [  182.373208] WARNING: CPU: 4 PID: 2826 at /build/linux-5s7Xkn/linux-4.15.0/fs/quota/dquot.c:626 dquot_writeback_dquots+0x25d/0x270
      [  182.373209] Modules linked in: osp(OE) mdd(OE) lod(OE) mdt(OE) lfsck(OE) mgs(OE) mgc(OE) quota_v2 quota_tree osd_ldiskfs(OE) ldiskfs(OE) lquota(OE) fid(OE) fld(OE) ptlrpc(OE) ko2iblnd(OE) obdclass(OE) lnet(OE) libcfs(OE) rdma_ucm(OE) ib_ucm(OE) ib_ipoib(OE) ib_uverbs(OE) ib_umad(OE) esp6_offload esp6 esp4_offload esp4 xfrm_algo mlx5_fpga_tools(OE) mlx4_en(OE) mlx4_ib(OE) mlx4_core(OE) ppdev input_leds joydev serio_raw parport_pc parport lpc_ich qemu_fw_cfg mac_hid sch_fq_codel nfsd auth_rpcgss ib_iser(OE) rdma_cm(OE) nfs_acl iw_cm(OE) lockd ib_cm(OE) grace iscsi_tcp libiscsi_tcp sunrpc libiscsi scsi_transport_iscsi knem(OE) ip_tables x_tables autofs4 btrfs zstd_compress raid10 raid456 async_raid6_recov async_memcpy async_pq async_xor async_tx xor raid6_pq libcrc32c raid1 raid0 multipath linear mlx5_ib(OE)
      [  182.373250]  ib_core(OE) hid_generic usbhid hid crct10dif_pclmul crc32_pclmul ghash_clmulni_intel pcbc aesni_intel aes_x86_64 mlx5_core(OE) crypto_simd mlxfw(OE) devlink glue_helper mlx_compat(OE) cryptd ahci psmouse ptp libahci i40evf virtio_net virtio_blk pps_core virtio_scsi
      [  182.373265] CPU: 4 PID: 2826 Comm: osp-syn-1-0 Tainted: G           OE    4.15.0-20-generic #21-Ubuntu
      [  182.373266] Hardware name: QEMU Standard PC (Q35 + ICH9, 2009), BIOS rel-1.11.0-0-g63451fca13-prebuilt.qemu-project.org 04/01/2014
      [  182.373269] RIP: 0010:dquot_writeback_dquots+0x25d/0x270
      [  182.373269] RSP: 0018:ffffac8e45cd3988 EFLAGS: 00010246
      [  182.373271] RAX: 0000000000000000 RBX: ffff95fa2203c000 RCX: 0000000000000000
      [  182.373272] RDX: ffff95f9b425bc00 RSI: 00000000ffffffff RDI: ffff95fa225dd000
      [  182.373272] RBP: ffffac8e45cd39c8 R08: 0000000000000000 R09: 0000000000000000
      [  182.373273] R10: ffffac8e45cd39d8 R11: ffff95fa232ce2bc R12: ffff95fa225dd000
      [  182.373274] R13: ffff95fa225dc000 R14: ffff95fa225dd000 R15: ffff95f9b10a7800
      [  182.373275] FS:  0000000000000000(0000) GS:ffff95fabf300000(0000) knlGS:0000000000000000
      [  182.373276] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [  182.373277] CR2: 000055b4df2a5200 CR3: 000000025760a002 CR4: 00000000007606e0
      [  182.373280] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
      [  182.373281] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
      [  182.373281] PKRU: 55555554
      [  182.373282] Call Trace:
      [  182.373302]  ldiskfs_sync_fs+0x5d/0x1d0 [ldiskfs]
      [  182.373314]  osd_commit_async+0x15d/0x1d0 [osd_ldiskfs]
      [  182.373320]  osp_sync_force+0xa5/0x2e0 [osp]
      [  182.373326]  osp_sync_process_queues+0x1234/0x1f40 [osp]
      [  182.373352]  ? llog_osd_next_block+0xb4c/0xb90 [obdclass]
      [  182.373365]  ? llog_osd_next_block+0xb4c/0xb90 [obdclass]
      [  182.373377]  llog_process_thread+0x625/0x1580 [obdclass]
      [  182.373394]  ? llog_process_thread+0x625/0x1580 [obdclass]
      [  182.373402]  ? osp_sync_force+0x2e0/0x2e0 [osp]
      [  182.373420]  llog_process_or_fork+0xb7/0x4a0 [obdclass]
      [  182.373439]  llog_cat_process_cb+0x208/0x220 [obdclass]
      [  182.373458]  llog_process_thread+0x625/0x1580 [obdclass]
      [  182.373479]  ? llog_cat_cancel_records+0x380/0x380 [obdclass]
      [  182.373499]  llog_process_or_fork+0xb7/0x4a0 [obdclass]
      [  182.373516]  ? llog_cat_cancel_records+0x380/0x380 [obdclass]
      [  182.373528]  llog_cat_process_or_fork+0x95/0x280 [obdclass]
      [  182.373531]  ? __wake_up_common_lock+0x8e/0xc0
      [  182.373536]  ? osp_sync_force+0x2e0/0x2e0 [osp]
      [  182.373548]  llog_cat_process+0x22/0x30 [obdclass]
      [  182.373553]  osp_sync_thread+0x1fe/0xa20 [osp]
      [  182.373556]  ? __schedule+0x29f/0x8b0
      [  182.373559]  kthread+0x121/0x140
      [  182.373563]  ? osp_sync_process_committed+0x680/0x680 [osp]
      [  182.373565]  ? kthread_create_worker_on_cpu+0x70/0x70
      [  182.373567]  ret_from_fork+0x35/0x40
      [  182.373568] Code: 89 7f 08 48 c7 c7 00 87 e0 be ff 14 25 a8 8f e3 be e9 fb fe ff ff 0f 0b e9 99 fe ff ff 0f 0b e9 86 fe ff ff 0f 0b e9 73 fe ff ff <0f> 0b e9 c5 fd ff ff 66 90 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 
      [  182.373596] ---[ end trace 5a096965ddb009b6 ]---
       

            dongyang Dongyang Li
            sihara Shuichi Ihara
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: